crates/ruff_python_parser/tests/snapshots/invalid_syntax@params_multiple_kwargs.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/params_multiple_kwargs.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..38,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..37,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                        node_index: NodeIndex(None),
                        parameter_node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..32,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                end: 9,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 8..9,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 8..9,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: Some(
                            Parameter {
                                range: 22..31,
                                name: Identifier {
                                    id: Name("kwargs2"),
                                    range: 24..31,
                                    node_index: NodeIndex(None),
                                    parameter_node_index: NodeIndex(None),
                                },
                                annotation: None,
                            },
                        ),
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 34..37,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 34..37,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(a, **kwargs1, **kwargs2): ...
  |                       ^^ Syntax Error: Parameter cannot follow var-keyword parameter
  |
