crates/ruff_python_parser/tests/snapshots/invalid_syntax@params_multiple_star_separator.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/params_multiple_star_separator.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..53,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..24,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                        node_index: NodeIndex(None),
                        parameter_node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..19,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                end: 9,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 8..9,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 8..9,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [
                            ParameterWithDefault {
                                end: 18,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 17..18,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 17..18,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 21..24,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 21..24,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 25..52,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 29..32,
                        node_index: NodeIndex(None),
                        parameter_node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 32..47,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                end: 34,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 33..34,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 33..34,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [
                            ParameterWithDefault {
                                end: 40,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 39..40,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 39..40,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                end: 43,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 42..43,
                                    name: Identifier {
                                        id: Name("c"),
                                        range: 42..43,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 49..52,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 49..52,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(a, *, *, b): ...
  |               ^ Syntax Error: Only one '*' separator allowed
2 | def foo(a, *, b, c, *): ...
  |


  |
1 | def foo(a, *, *, b): ...
2 | def foo(a, *, b, c, *): ...
  |                     ^ Syntax Error: Only one '*' separator allowed
  |
